--- a/package.json
+++ b/package.json
@@ -18,25 +18,25 @@
   },
   "dependencies": {
     "@mdx-js/react": "^2.3.0",
-    "autoprefixer": "^10.4.21",
     "gatsby": "^5.14.1",
     "gatsby-plugin-image": "^3.14.0",
     "gatsby-plugin-mdx": "^5.14.1",
-    "gatsby-plugin-postcss": "^6.14.0",
     "gatsby-plugin-sharp": "^5.14.0",
     "gatsby-source-filesystem": "^5.14.0",
     "gatsby-transformer-sharp": "^5.14.0",
-    "postcss": "^8.5.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "tailwindcss": "^4.1.8"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.8",
+    "@types/http-proxy": "^1.17.16",
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "autoprefixer": "^10.4.21",
+    "gatsby-plugin-postcss": "^6.14.0",
     "gh-pages": "^6.3.0",
+    "postcss": "^8.5.5",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.3.3"
   }
 }
