--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "gatsby-transformer-sharp": "^5.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-simple-typewriter": "^5.0.1"
   },
   "devDependencies": {
     "@types/http-proxy": "^1.17.16",
