--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "autoprefixer": "^10.4.21",
+    "case-sensitive-paths-webpack-plugin": "^2.4.0",
     "gatsby-plugin-postcss": "^6.14.0",
     "gh-pages": "^6.3.0",
     "postcss": "^8.5.5",
