--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -30,8 +30,8 @@ jobs:
 
       - name: Deploy to GitHub Pages
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GH_REPO: https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/cpw9783/cpw9783.github.io.git
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          GH_REPO: https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/cpw9783/cpw9783.github.io.git
           GIT_AUTHOR_NAME: github-actions[bot]
           GIT_AUTHOR_EMAIL: github-actions[bot]@users.noreply.github.com
           GIT_COMMITTER_NAME: github-actions[bot]
