--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -31,10 +31,10 @@ jobs:
       - name: Deploy to GitHub Pages
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          GH_REPO: https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/cpw9783/cpw9783.github.io.git
           GIT_AUTHOR_NAME: github-actions[bot]
           GIT_AUTHOR_EMAIL: github-actions[bot]@users.noreply.github.com
           GIT_COMMITTER_NAME: github-actions[bot]
           GIT_COMMITTER_EMAIL: github-actions[bot]@users.noreply.github.com
         run: |
+          GH_REPO="https://x-access-token:${GH_TOKEN}@github.com/cpw9783/cpw9783.github.io.git"
           npx gh-pages -d public -r "$GH_REPO"
