--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby-transformer-sharp": "^5.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^5.5.0",
     "react-simple-typewriter": "^5.0.1"
   },
@@ -34,6 +35,7 @@
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "@types/react-helmet": "^6.1.11",
     "autoprefixer": "^10.4.21",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
     "gatsby-plugin-postcss": "^6.14.0",
